[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Menu/Settings.gd" type="Script" id=1]
[ext_resource path="res://UI/Menu/back_shine.png" type="Texture" id=2]
[ext_resource path="res://UI/Menu/back.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu/back_pressed.png" type="Texture" id=4]
[ext_resource path="res://Fonts/pixeltype.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 508.0
margin_top = 174.0
margin_right = 772.0
margin_bottom = 546.0
custom_constants/separation = 40

[node name="Title" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
text = "Game Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 264.0
margin_bottom = 124.0

[node name="LabelMusic" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 14.0
text = "Music Volume"
align = 1

[node name="HSliderMusic" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 34.0
max_value = 1.0
step = 0.02
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 264.0
margin_bottom = 198.0

[node name="LabelSound" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 264.0
margin_bottom = 14.0
text = "Sound Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSliderSound" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 34.0
max_value = 1.0
step = 0.02

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 264.0
margin_bottom = 280.0

[node name="LabelAim" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3"]
margin_right = 264.0
margin_bottom = 14.0
text = "Aiming Type"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 42.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxDir" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 22.0
margin_right = 46.0
margin_bottom = 24.0

[node name="LabelDir" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 50.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
text = "Direction Arrow"

[node name="CheckBoxCross" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 154.0
margin_right = 178.0
margin_bottom = 24.0

[node name="LabelCross" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 182.0
margin_top = 5.0
margin_right = 241.0
margin_bottom = 19.0
text = "Crosshair"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 264.0
margin_bottom = 372.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 67.0
margin_right = 197.0
margin_bottom = 52.0
rect_min_size = Vector2( 130, 52 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HSliderMusic" to="." method="_on_HSliderMusic_value_changed"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer2/HSliderSound" to="." method="_on_HSliderSound_value_changed"]
[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3/HBoxContainer/CheckBoxDir" to="." method="_on_CheckBoxDir_toggled"]
[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer3/HBoxContainer/CheckBoxCross" to="." method="_on_CheckBoxCross_toggled"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
